# jsk_demos

detect_cans_in_fridge_201202/euslisp/: main.l
detect_cans_in_fridge_201202/launch/: color_histogram.launch
diabolo_pr2_201806/euslisp/: idle.l  juggle.l
diabolo_pr2_201806/src/: calc_idle_diabolo_state.cpp
jsk_2019_10_spatula/: CMakeLists.txt  README.md  package.xml  plot_bag.py
jsk_2019_10_spatula/euslisp/: angle-vectors.l  av-scrape-wall-0.l  av-scrape-wall-1.l  av-scrape-wall-2.l  av-scrape-wall-3.l  av-transfer-dough-0.l  av-transfer-dough-1.l  av-transfer-dough-2.l  av-transfer-dough-3.l  av-transfer-dough-4.l  feedback.l  get-scraping-side.l  get_jacobian.l  pr2-spatula-force-test.l  pr2-spatula-round-movement.l  pr2-spatula-up-down.l  scrape_bowl.l  scrape_bowl_old_gripper.l  sense_touching.l  step-response.l  vision-bowl.l
jsk_2019_10_spatula/launch/: color_filter.launch  detect_dirt.launch  detect_dirt_pc2.launch  euclidean.launch  passthrough.launch  pointcloud_processing.launch  reproduce_pc.launch
jsk_2019_10_spatula/msg/: Force.msg  Jacobian.msg
jsk_2019_10_spatula/python/: analyze_bag.py  analyze_effort.py  analyze_jacobi.py  compare_force.py  detect_dirt.py  detect_touching.py  force.json  get_desired_force.py  get_desired_trajectory.py  get_tf_from_bag.py  merge_bowl_positions.py  merge_pointcloud_indices.py  merge_pointclouds.py  merge_pointclouds_old.py  plot_bag.py  plot_forces.py
jsk_2020_04_chahakobi/: CMakeLists.txt  README.md  package.xml
jsk_2020_04_pr2_curry/: CMakeLists.txt  README.md  package.xml
(+536 files in other folders)
